syntax = "proto3";

import "shared.proto";

package co.topl.bridge.consensus.pbft;


message PrePrepareRequest {
  uint64 viewNumber     = 1;
  uint64 sequenceNumber = 2;
  bytes  digest         = 4;
  bytes  signature      = 5;
  co.topl.bridge.shared.StateMachineRequest payload = 6;
}

message PrepareRequest {
  uint64 viewNumber     = 1;
  uint64 sequenceNumber = 2;
  bytes  digest         = 3;
  uint32 replicaId      = 4;
  bytes  signature       = 5;
}

message CommitRequest {
  uint64  viewNumber     = 1;
  uint64  sequenceNumber = 2;
  bytes   digest         = 3;
  uint32  replicaId      = 4;
  bytes   signature       = 5;
}

message CheckpointRequest {
  uint64 sequenceNumber = 1;
  bytes  digest         = 2;
  uint32 replicaId     = 3;
  bytes signature       = 4;
}

message Pm {
  PrePrepareRequest prePrepare = 1;
  repeated PrepareRequest prepares = 2;
}

message ViewChangeRequest {
  uint64 newViewNumber = 1;
  uint64 lastStableCheckpoinSeqNumber = 2;
  // list of checkpoint requests
  repeated CheckpointRequest checkpoints = 3;
  // list of pre-prepare requests
  repeated Pm pms = 4;
  uint32 replicaId = 5;
  bytes signature = 6;
}

message NewViewRequest {
  uint64 newViewNumber = 1;
  repeated ViewChangeRequest viewChanges = 2; // Vs
  repeated PrePrepareRequest preprepares = 3; // Os
  bytes signature = 6;
}

service PBFTInternalService {
  rpc PrePrepare(PrePrepareRequest)    returns (co.topl.bridge.shared.Empty);
  rpc Prepare(PrepareRequest)          returns (co.topl.bridge.shared.Empty);
  rpc Commit(CommitRequest)            returns (co.topl.bridge.shared.Empty);
  rpc Checkpoint(CheckpointRequest)    returns (co.topl.bridge.shared.Empty);
  rpc ViewChange(ViewChangeRequest)    returns (co.topl.bridge.shared.Empty);
  rpc NewView(NewViewRequest)          returns (co.topl.bridge.shared.Empty);
}
