syntax = "proto3";


package xyz.stratalab.bridge.shared;

message Empty {

}

message StateMachineRequest {
  uint64 timestamp = 1;
  uint32  clientNumber = 2;
  bytes signature = 3;
  oneof operation {
    StartSessionOperation startSession = 4;
    PostDepositBTCOperation postDepositBTC = 5;
    TimeoutDepositBTCOperation timeoutDepositBTC = 6;
    TimeoutTBTCMintOperation timeoutTBTCMint = 7;
    PostRedemptionTxOperation postRedemptionTx = 8;
    PostClaimTxOperation postClaimTx = 9;
  }
}

message MintingStatusOperation {
  string sessionId = 1;
}

message StartSessionOperation {
  optional string sessionId = 1;
  string pkey = 2;
  string sha256= 3;
}

message PostDepositBTCOperation {
 string sessionId = 1;
 uint32 height = 2;
 string txId = 3;
 uint32 vout = 4;
 bytes amount = 5;
}

message TimeoutDepositBTCOperation {
 string sessionId = 1;
 uint32 height = 2;
}

message PostTBTCMintOperation {
 string sessionId = 1;
 uint64 height = 2;
 string utxoTxId = 3;
 uint32 utxoIndex = 4;
 bytes amount = 5;
}

message TimeoutTBTCMintOperation {
 string sessionId = 1;
 uint32 btcHeight = 2;
 uint64 toplHeight = 3;
}

message PostRedemptionTxOperation {
 string sessionId = 1;
 string secret = 2;
 uint64 height = 3;
 string utxoTxId = 4;
 uint32 utxoIndex = 5;
 string txId = 6;
 uint32 vout = 7;
 bytes amount = 8;
}

message TimeoutRedemptionTxOperation {
 string sessionId = 1;
}

message PostClaimTxOperation {
 string sessionId = 1;
 uint32 height = 3;
 string txId = 4;
 uint32 vout = 5;
}

message TimeoutClaimTxOperation {
 string sessionId = 1;
}
